fix: improve BlockSet class, use it in more places